<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_bottom_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
      >
      <TextView 
          android:layout_marginTop="10dp"
          android:id="@+id/gexing_title"
          android:gravity="left|center"
          style="@style/NormalWhiteText16"
          android:layout_width="match_parent"
    android:layout_height="30dp"
    android:layout_alignParentTop="true"
    android:text="点歌->歌星点歌->全部"
          />
      <LinearLayout 
          android:id="@+id/gexing_select"
            android:layout_below="@id/gexing_title"
       android:layout_width="match_parent"
    android:layout_height="30dp"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_marginTop="10dp"
          >
          <Button 
               android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:text="@string/ktv_dalu_nan"
    android:layout_weight="1"
    android:background="@color/transparent"
    android:id="@+id/gexing_dalu_nan"
    style="@style/NormalWhiteText16"
              />
          <Button 
               android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:text="@string/ktv_dalu_nv"
    android:layout_weight="1"
     android:background="@color/transparent"
    android:id="@+id/gexing_dalu_nv"
    style="@style/NormalWhiteText16"
              />
          
          <Button 
               android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:text="@string/ktv_gangtai_nan"
    android:layout_weight="1"
     android:background="@color/transparent"
    android:id="@+id/gexing_gangtai_nan"
    style="@style/NormalWhiteText16"
              />
          
          <Button 
               android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:text="@string/ktv_gangtai_nv"
    android:layout_weight="1"
     android:background="@color/transparent"
    android:id="@+id/gexing_gangtai_nv"
    style="@style/NormalWhiteText16"
              />
          
          <Button 
               android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:text="@string/ktv_haiwai_nan"
    android:layout_weight="1"
     android:background="@color/transparent"
    android:id="@+id/gexing_haiwai_nan"
    style="@style/NormalWhiteText16"
              />
          
          <Button 
               android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:text="@string/ktv_haiwai_nv"
    android:layout_weight="1"
     android:background="@color/transparent"
    android:id="@+id/gexing_haiwai_nv"
    style="@style/NormalWhiteText16"
              />
           <Button 
               android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:text="@string/ktv_yuedui_zuhe"
    android:layout_weight="1"
     android:background="@color/transparent"
    android:id="@+id/gexing_luedui_zuhe"
    style="@style/NormalWhiteText16"
              />
          
          <Button 
               android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:text="@string/ktv_qita"
    android:layout_weight="1"
     android:background="@color/transparent"
    android:id="@+id/gexing_qita"
    style="@style/NormalWhiteText16"
              />
          <Button 
               android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:text="@string/ktv_all_gexing"
    android:layout_weight="1"
     android:background="@color/transparent"
    android:id="@+id/gexing_quanbu"
    style="@style/NormalWhiteText16"
              />
          
      </LinearLayout>
   <com.sz.ktv.view.cycle.MyCycleViewPager 
           android:layout_below="@id/gexing_select"
       android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scroll_layout"
    android:layout_marginBottom="45dp"
    android:layout_marginTop="15dp"
       >
   </com.sz.ktv.view.cycle.MyCycleViewPager>
   <com.sz.ktv.view.widget.KtvBottomPageWidget
       android:id="@+id/ktv_bottom_dots"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
       android:layout_marginBottom="10dp"
       />
</RelativeLayout>