<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_white"
      >
 <LinearLayout 
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_weight="1"
    android:layout_marginTop="0.5dp"
    android:layout_marginLeft="0.5dp"
     >
     <TextView 
         android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:text="@string/ktv_manyao"
    style="@style/NormalWhiteText18"
    android:gravity="center"
    android:layout_marginRight="0.5dp"
    android:background="@color/color_blue"
    android:id="@+id/xiugai_manyao"
         />
     <TextView 
    android:layout_marginRight="0.5dp"
         android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:text="@string/ktv_qiaqia"
    android:background="@color/color_blue"
     style="@style/NormalWhiteText18"
     android:gravity="center"
     android:id="@+id/xiugai_qiaqia"
         />
     
 </LinearLayout>
        
 
 <LinearLayout 
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_margin="0.5dp"
    android:layout_weight="1"
     >
     <TextView 
         android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:text="@string/ktv_huaerzi"
    android:background="@color/color_blue"
    style="@style/NormalWhiteText18"
    android:gravity="center"
    android:layout_marginRight="0.5dp"
    android:id="@+id/xiugai_huaerzi"
         />
     <TextView 
         android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:text="@string/ktv_pulushi"
    android:id="@+id/xiugai_pulushi"
    android:background="@color/color_blue"
    android:layout_marginRight="0.5dp"
     style="@style/NormalWhiteText18"
     android:gravity="center"
         />
     
 </LinearLayout>
 
 <LinearLayout 
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_margin="0.5dp"
    android:layout_weight="1"
     >
     <TextView 
         android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:text="@string/ktv_dishigao"
    style="@style/NormalWhiteText18"
    android:background="@color/color_blue"
    android:gravity="center"
    android:id="@+id/xiugai_dishigao"
    android:layout_marginRight="0.5dp"
         />
     <TextView 
         android:layout_marginRight="0.5dp"
         android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:text="@string/ktv_jiteba"
    android:id="@+id/xiugai_jiteba"
     style="@style/NormalWhiteText18"
     android:background="@color/color_blue"
     android:gravity="center"
         />
     
 </LinearLayout>
 
 <LinearLayout 
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_margin="0.5dp"
    android:layout_weight="1"
     >
     <TextView 
         android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:text="@string/ktv_chuanshao"
	android:id="@+id/xiugai_chuanshao"
    android:background="@color/color_blue"
    android:layout_marginRight="0.5dp"
    android:gravity="center"
    style="@style/NormalWhiteText18"
         />
     <TextView 
         android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:text="@string/ktv_tange"
    android:id="@+id/xiugai_tange"
    android:layout_marginRight="0.5dp"
    android:background="@color/color_blue"
    android:gravity="center"
     style="@style/NormalWhiteText18"
         />
     
 </LinearLayout>
 
  
</LinearLayout>