<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_white"
      >
 <LinearLayout 
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_weight="1"
    android:layout_marginTop="1dp"
    android:layout_marginLeft="1dp"
     >
     <TextView 
         android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:text="@string/ktv_hechanggequ"
    style="@style/NormalWhiteText18"
    android:gravity="center"
    android:layout_marginRight="1dp"
    android:background="@color/color_blue"
    android:id="@+id/xiugai_hechang"
         />
     <TextView 
    android:layout_marginRight="1dp"
         android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:text="@string/ktv_huaijiugequ"
    android:background="@color/color_blue"
     style="@style/NormalWhiteText18"
     android:gravity="center"
     android:id="@+id/xiugai_huaijiu"
         />
     
 </LinearLayout>
        
 
 <LinearLayout 
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_margin="0.5dp"
    android:layout_weight="1"
     >
     <TextView 
         android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:text="@string/ktv_shengrigequ"
    android:background="@color/color_blue"
    style="@style/NormalWhiteText18"
    android:gravity="center"
    android:layout_marginRight="1dp"
    android:id="@+id/xiugai_shengri"
         />
     <TextView 
         android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:text="@string/ktv_xiqinggequ"
    android:id="@+id/xiugai_xiqing"
    android:background="@color/color_blue"
    android:layout_marginRight="1dp"
     style="@style/NormalWhiteText18"
     android:gravity="center"
         />
     
 </LinearLayout>
 
 <LinearLayout 
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_margin="0.5dp"
    android:layout_weight="1"
     >
     <TextView 
         android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:text="@string/ktv_dianyingxinshang"
    style="@style/NormalWhiteText18"
    android:background="@color/color_blue"
    android:gravity="center"
    android:id="@+id/xiugai_dianying"
    android:layout_marginRight="1dp"
         />
     <TextView 
         android:layout_marginRight="1dp"
         android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:text="@string/ktv_xiquxinshang"
    android:id="@+id/xiugai_xiqu"
     style="@style/NormalWhiteText18"
     android:background="@color/color_blue"
     android:gravity="center"
         />
     
 </LinearLayout>
 
 <LinearLayout 
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_margin="0.5dp"
    android:layout_weight="1"
     >
     <TextView 
         android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:text="@string/ktv_xiangshengxiaopin"
	android:id="@+id/xiugai_xiangsheng"
    android:background="@color/color_blue"
    android:layout_marginRight="1dp"
    android:gravity="center"
    style="@style/NormalWhiteText18"
         />
     <TextView 
         android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:text="@string/ktv_ertonggequ"
    android:id="@+id/xiugai_ertong"
    android:layout_marginRight="1dp"
    android:background="@color/color_blue"
    android:gravity="center"
     style="@style/NormalWhiteText18"
         />
     
 </LinearLayout>
 
 <LinearLayout 
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_margin="0.5dp"
    android:layout_weight="1"
     >
     <TextView 
         android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:text="@string/ktv_geminggequ"
	android:id="@+id/xiugai_geming"
    android:background="@color/color_blue"
    android:layout_marginRight="1dp"
    android:gravity="center"
    style="@style/NormalWhiteText18"
         />
     <TextView 
         android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:text=""
    android:layout_marginRight="1dp"
    android:background="@color/color_blue"
    android:gravity="center"
     style="@style/NormalWhiteText18"
         />
     
 </LinearLayout>
</LinearLayout>