<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_white"
      >
 <LinearLayout 
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_weight="1"
    android:layout_marginTop="0.5dp"
    android:layout_marginLeft="0.5dp"
     >
     <TextView 
         android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:text="@string/ktv_yuyan_guoyu"
    style="@style/NormalWhiteText18"
    android:gravity="center"
    android:layout_marginRight="0.5dp"
    android:background="@color/color_blue"
    android:id="@+id/xiugai_guoyu"
         />
     <TextView 
    android:layout_marginRight="0.5dp"
         android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:text="@string/ktv_yuyan_riyu"
    android:background="@color/color_blue"
     style="@style/NormalWhiteText18"
     android:gravity="center"
     android:id="@+id/xiugai_riyu"
         />
     
 </LinearLayout>
        
 
 <LinearLayout 
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_margin="0.5dp"
    android:layout_weight="1"
     >
     <TextView 
         android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:text="@string/ktv_yuyan_yueyu"
    android:background="@color/color_blue"
    style="@style/NormalWhiteText18"
    android:gravity="center"
    android:layout_marginRight="0.5dp"
    android:id="@+id/xiugai_yueyu"
         />
     <TextView 
         android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:text="@string/ktv_yuyan_hanyu"
    android:id="@+id/xiugai_hanyu"
    android:background="@color/color_blue"
    android:layout_marginRight="0.5dp"
     style="@style/NormalWhiteText18"
     android:gravity="center"
         />
     
 </LinearLayout>
 
 <LinearLayout 
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_margin="0.5dp"
    android:layout_weight="1"
     >
     <TextView 
         android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:text="@string/ktv_yuyan_minnanyu"
    style="@style/NormalWhiteText18"
    android:background="@color/color_blue"
    android:gravity="center"
    android:id="@+id/xiugai_minnanyu"
    android:layout_marginRight="0.5dp"
         />
     <TextView 
         android:layout_marginRight="0.5dp"
         android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:text="@string/ktv_qita"
    android:id="@+id/xiugai_qita"
     style="@style/NormalWhiteText18"
     android:background="@color/color_blue"
     android:gravity="center"
         />
     
 </LinearLayout>
 
 <LinearLayout 
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_margin="0.5dp"
    android:layout_weight="1"
     >
     <TextView 
         android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:text="@string/ktv_yuyan_yingyu"
	android:id="@+id/xiugai_yingyu"
    android:background="@color/color_blue"
    android:layout_marginRight="0.5dp"
    android:gravity="center"
    style="@style/NormalWhiteText18"
         />
     <TextView 
         android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:text=""
    android:layout_marginRight="0.5dp"
    android:background="@color/color_blue"
    android:gravity="center"
     style="@style/NormalWhiteText18"
         />
     
 </LinearLayout>
 
</LinearLayout>